# AIFlow_Builder-BE

./: README.md  pyproject.toml
app/: main.py
app/api/routes/: auth.py  workflows.py
app/core/: config.py
app/db/: session.py
app/db/crud/: user.py  workflow.py
app/db/models/: workflow.py
app/schemas/: user.py  workflow.py
app/services/: auth.py
